--- a/frame2.html
+++ b/frame2.html
@@ -29,7 +29,7 @@
 -->
 
 <a href = "#!" onclick = "if (confirm('來一起當公民記者吧!')) window.open('https://inlivetw.github.io/enter/')">
-  <img src = "http://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/CBS_Eyemark.svg/500px-CBS_Eyemark.svg.png"/>
+  <img src = "imgage/eye.png"/>
 </a>
 
 <!--
