--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta property="og:description" content="inLiveTW直播地圖，就近找夥伴。" />
     <meta property="og:title" content="inLiveTW直播地圖" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://map.alearn.org.tw/we/index.html" />
-    <meta property="og:image" content="http://map.alearn.org.tw/we/img/auto20.jpg" />
+    <meta property="og:url" content="//map.alearn.org.tw/we/index.html" />
+    <meta property="og:image" content="imga/auto20.jpg" />
 
 
     <link rel="shortcut icon" href="image/favicon.ico">
@@ -29,9 +29,9 @@
 </style>
 
 
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-select.min.css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-select.min.css">
 
 <!--  <link rel="stylesheet" href="module/src/bootstrap.css" />
   <link rel="stylesheet" href="module/src/bootstrap-theme.min.css" /> 
@@ -56,8 +56,8 @@
   <div class="container-fluid">
       <div class="navbar-header pull-left">
             <div class = "navbar-left">
-              <a href = "http://g0v.tw" target = "_blank">
-                <img src = "http://g0v.tw/imgs/g0v-horizontal-transparent-darkbackground-m.png"/>
+              <a href = "//g0v.tw" target = "_blank">
+                <img src = "//g0v.tw/imgs/g0v-horizontal-transparent-darkbackground-m.png"/>
               </a>
             </div>
       </div> 
@@ -104,7 +104,7 @@
 <script src="module/src/ngStorage.js"></script>
 
 
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 <!--
 <script src="module/src/bootstrap.min.js"></script>
