--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
   <div class="container-fluid">
       <div class="navbar-header pull-left">
             <div class = "navbar-left">
-              <a href = "//g0v.tw" target = "_blank">
-                <img src = "//g0v.tw/imgs/g0v-horizontal-transparent-darkbackground-m.png"/>
+              <a href = "http://g0v.tw" target = "_blank">
+                <img src = "http://g0v.tw/imgs/g0v-horizontal-transparent-darkbackground-m.png"/>
               </a>
             </div>
       </div> 
