--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="inLiveTW直播地圖，就近找夥伴。" />
     <meta property="og:title" content="inLiveTW直播地圖" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="//map.alearn.org.tw/we/index.html" />
+    <meta property="og:url" content="http://map.alearn.org.tw/we/index.html" />
     <meta property="og:image" content="imga/auto20.jpg" />
 
 
@@ -29,9 +29,9 @@
 </style>
 
 
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-select.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-select.min.css">
 
 <!--  <link rel="stylesheet" href="module/src/bootstrap.css" />
   <link rel="stylesheet" href="module/src/bootstrap-theme.min.css" /> 
@@ -101,7 +101,7 @@
 <script src="module/src/ngStorage.js"></script>
 
 
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
 <!--
 <script src="module/src/bootstrap.min.js"></script>
