--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="fb:app_id" content="485195848253155" />
     
     <meta property="og:site_name" content="inLiveTW" />
-    <meta property="og:description" content="inLiveTW直播地圖，就近找夥伴。" />
+    <meta property="og:description" content="inLiveTW直播地圖，讓你隨時看到最前線。" />
     <meta property="og:title" content="inLiveTW直播地圖" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://map.alearn.org.tw/we/index.html" />
