--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
               </a>
             </div>
       </div> 
-      <div class="collapse navbar-collapse">         
-      </div>
+      
+      <div class="navbar-header pull-right">
+
+        <a href = "../enter/index.html" target = "_blank" class = "navbar-brand">App下載</a></li>
+
+      </div> 
   </div>
 </div>
 
@@ -70,7 +74,9 @@
   <div class="container main-container">
     <div class="row">
           <skh-frame></skh-frame>
-          <skh-localmap></skh-localmap>
+          <div class = "col-md-12">
+            <skh-localmap></skh-localmap>
+          </div>
     </div>
   </div>
 
